# usageTracker

./: .gitignore  CMakeLists.txt
qml/: PerformanceTab.qml  Point.qml  StatsGauge.qml  TimeChart.qml  UsageTabButton.qml  main.qml
qml/Charts/: TimeChart.qml
src/: CpuTimer.cpp  CpuTimer.h  IPerformanceHandler.h  main.cpp  util.cpp  util.h
src/linux/: LinuxPerformanceHandler.cpp  LinuxPerformanceHandler.h
src/windows/: PdhQuery.cpp  PdhQuery.h  WindowsPerformanceHandler.cpp  WindowsPerformanceHandler.h
